--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
       <h1>
 <a id="cauldron" class="anchor" href="#cauldron" aria-hidden="true"><span class="octicon octicon-link"></span></a>cauldron</h1>
 
-<p>cauldron provides an interface for</p>
+<p><code>cauldron</code> provides an interface for</p>
 
 <ul>
-<li>reading the <strong>secrets.yml</strong> format</li>
-<li>fetching secrets from a trusted store</li>
-<li>exporting their values to the environment</li>
+<li>Reading a <strong>secrets.yml</strong> file</li>
+<li>Fetching secrets from a trusted store</li>
+<li>Exporting secret values to a sub-process environment</li>
 </ul>
-
-<p>Parse secrets.yml to export environment variables fetched from a trusted store.</p>
 
 <h2>
 <a id="secretsyml" class="anchor" href="#secretsyml" aria-hidden="true"><span class="octicon octicon-link"></span></a>secrets.yml</h2>
@@ -45,7 +43,7 @@ secrets.</p>
 <p>Running an implementation of cauldron against this example file will</p>
 
 <ol>
-<li>Fetch the secret defined at <code>aws/iam/user/robot/access_key_id</code> in a secrets server and set the environment variable <code>AWS_ACCESS_KEY_ID</code> to the secret's value.</li>
+<li>Fetch the secret stored at <code>aws/iam/user/robot/access_key_id</code> and set the environment variable <code>AWS_ACCESS_KEY_ID</code> to the secret's value.</li>
 <li>The value of <code>AWS_PEM</code> will be the path to a temporary memory-mapped file that is cleaned up on exit of the process cauldron is wrapping.</li>
 <li>
 <code>ENVIRONMENT</code> will be interpolated at runtime by using cauldron's <code>-D</code> flag, like so: <code>cauldron -D '$environment=production'</code>. This flag can be specified multiple times.</li>
@@ -57,14 +55,14 @@ secrets.</p>
 <p>Cauldron uses plug-and-play providers. A provider is any executable that satisfies this contract:</p>
 
 <ul>
-<li>Accepts one argument, where a secret is located</li>
+<li>Accepts one argument, which is the provider-specific identifier of a secret.</li>
 <li>Returns the value of the secret on stdout and exit code 0 if retrieval was successful.</li>
 <li>Returns an error message on stderr and a non-0 exit code if retrieval was unsuccessful.</li>
 </ul>
 
-<p>Providers can be written in any language you prefer. They can be as simple as a shell script.</p>
+<p>Providers can be written in any language. A provider can be as simple as a <code>sh</code> script.</p>
 
-<p>When cauldron runs it will look for a provider in <code>/usr/libexec/cauldron/</code>. If there is one executable
+<p>When cauldron runs, it looks for a provider in <code>/usr/libexec/cauldron/</code>. If there is one executable
 in this directory it will use it as the default provider. If the directory hold multiple executables
 you will be prompted to select the one you want to use. You can set the provider with the <code>-p, --provider</code>
 flag to the CLI or via the environment variable <code>CAULDRON_PROVIDER</code>. If your provider is in a location
@@ -86,8 +84,8 @@ called from and export the secret values to the environment of the command it wr
 
 <p>Define your keys in a <code>secrets.yml</code> file</p>
 
-<div class="highlight highlight-yml"><pre><span class="pl-s"><span class="pl-ent">AWS_ACCESS_KEY_ID:</span> <span class="pl-s">aws/iam/user/robot/access_key_id</span></span>
-<span class="pl-s"><span class="pl-ent">AWS_SECRET_ACCESS_KEY:</span> <span class="pl-s">aws/iam/user/robot/secret_access_key</span></span></pre></div>
+<div class="highlight highlight-yml"><pre><span class="pl-s"><span class="pl-ent">AWS_ACCESS_KEY_ID:</span> <span class="pl-s">!var aws/iam/user/robot/access_key_id</span></span>
+<span class="pl-s"><span class="pl-ent">AWS_SECRET_ACCESS_KEY:</span> <span class="pl-s">!var aws/iam/user/robot/secret_access_key</span></span></pre></div>
 
 <p>The script uses the Python library <a href="https://pypi.python.org/pypi/boto">boto</a>, which looks for <code>AWS_ACCESS_KEY_ID</code>
 and <code>AWS_SECRET_ACCESS_KEY</code> in the environment.</p>
@@ -96,13 +94,13 @@ and <code>AWS_SECRET_ACCESS_KEY</code> in the environment.</p>
 botoEC2 <span class="pl-k">=</span> boto.connect_ec2()
 <span class="pl-k">print</span>(botoEC2.get_all_instances())</pre></div>
 
-<p>Wrap running this script in cauldron.</p>
+<p>Wrap the Python script in cauldron:</p>
 
 <pre><code>cauldron python listEC2.py
 </code></pre>
 
-<p><code>python listEC2.py</code> is the command that cauldron wraps. Once this command exits
-and secrets in the environment are gone.</p>
+<p><code>python listEC2.py</code> is the command that cauldron wraps. Once the Python program exits,
+the secrets stored in temp files and in the Python process environment are gone.</p>
 
 <h3>
 <a id="flags" class="anchor" href="#flags" aria-hidden="true"><span class="octicon octicon-link"></span></a>Flags</h3>
